# vikeypass

./: .gitignore  .vikeypass.data  Cargo.toml  README.md  package-lock.json  package.json
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
